Refactor backend siguiendo principios SOLID y arregla ordenación de importes
- Eliminado código batch innecesario del backend
- Refactorizado ContractService usando patrón Facade
- Creados servicios especializados: ContractQueryService, ContractSearchService, ContractStatisticsService
- Implementadas custom queries para solucionar ordenación de importes usando COALESCE
- Añadidos tests unitarios completos para todos los servicios
- Corregido frontend para ordenación por estimatedAmount
- Simplificado ciclo de ordenación a 2 estados (asc ↔ desc)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>